<resources>
    <string name="app_name">时间线</string>
    <string name="title_activity_cv">CvActivity</string>
    <string name="tip_account">输入手机号</string>
    <string name="tip_password">输入密码</string>
    <string name="enroll">注册</string>
    <string name="signin">登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="new_user">注册</string>
    <string name="agreement" >注册即同意<font color="#00BE8E">《用户协议》</font></string>

</resources>
