<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:background="@drawable/login_back"
            android:layout_gravity="center"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:text="注册"
            android:layout_gravity="center"
            android:paddingLeft="120dp"
            android:textColor="#00BE8E"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:background="#70000000"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/enroll_et_mobile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_edittext"
            android:layout_gravity="center"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/tip_account"
            android:drawableLeft="@drawable/mobile"
            android:paddingLeft="20dp"
            android:drawablePadding="8dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/code_input"
                android:layout_marginTop="30dp"
                android:layout_width="180dp"
                android:paddingLeft="20dp"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/tip_password"
                android:drawableLeft="@drawable/message"
                android:textColor="@color/white"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textSize="20sp" />
            <Button
                android:id="@+id/get_bt_code"
                android:layout_weight="1"
                android:layout_marginTop="27dp"
                android:layout_marginLeft="20dp"
                android:text="获取验证码"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:background="@drawable/rounded_edittext_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <EditText
            android:id="@+id/password_input_enroll"
            android:layout_marginTop="30dp"
            android:layout_width="300dp"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/tip_password"
            android:drawableLeft="@drawable/pwd"
            android:textColor="@color/white"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_enroll"
            android:layout_width="300dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/enroll"
            android:textColor="#00BE8E"
            android:background="@drawable/rounded_edittext_enter"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_agreement"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/agreement"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>

